--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vendor/fmt"]
 	path = vendor/fmt
 	url = https://github.com/fmtlib/fmt
+[submodule "vendor/anycpp"]
+	path = vendor/anycpp
+	url = https://github.com/kildevaeld/anycpp
